--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "check": "tsc",
     "db:push": "drizzle-kit push"
   },
+  "engines": {
+    "node": "20.x"
+  },
   "notes": "removed framer motion dependency",
   "dependencies": {
     "@google/genai": "^1.30.0",
