--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "dev:client": "vite dev --port 5000",
-    "dev": "NODE_ENV=development PORT=9002 tsx server/index-dev.ts",
+    "dev": "DATABASE_URL=postgres://user:password@host:port/db?sslmode=require NODE_ENV=development PORT=9002 ./node_modules/.bin/tsx server/index-dev.ts",
     "build": "vite build && esbuild server/index-prod.ts --platform=node --packages=external --bundle --format=esm --outfile=dist/index.js",
     "start": "NODE_ENV=production node dist/index.js",
     "check": "tsc",
