Update Vercel runtime to vercel-nodejs@4.0.0

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   },
   "functions": {
     "dist/index.js": {
-      "runtime": "nodejs24.x",
+      "runtime": "vercel-nodejs@4.0.0",
       "memory": 1024,
       "maxDuration": 60
     }
