--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
     "NODE_ENV": "production"
   },
   "functions": {
-    "api/index.js": {
+    "api/index.ts": {
       "runtime": "vercel-nodejs@4.0.0",
       "memory": 1024,
       "maxDuration": 60
@@ -14,7 +14,7 @@
   "rewrites": [
     {
       "source": "/api/(.*)",
-      "destination": "/api/index.js"
+      "destination": "/api/index.ts"
     },
     {
       "source": "/(.*)",
