--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   },
   "functions": {
     "api/index.ts": {
-      "runtime": "@vercel/node",
+      "runtime": "@vercel/node@3.0.21",
       "memory": 1024,
       "maxDuration": 60
     }
