--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "notes": "removed framer motion dependency",
   "dependencies": {
+    "@esbuild/linux-x64": "^0.25.12",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
