--- a/package.json
+++ b/package.json
@@ -18,11 +18,20 @@
   "notes": "removed framer motion dependency",
   "dependencies": {
     "@capacitor-community/contacts": "^7.1.0",
-    "@capacitor/android": "^8.0.0",
-    "@capacitor/cli": "^8.0.0",
-    "@capacitor/core": "^8.0.0",
-    "@capacitor/filesystem": "^8.0.0",
-    "@capacitor/haptics": "^8.0.0",
+    "@capacitor/android": "^7.4.4",
+    "@capacitor/app": "^8.0.0",
+    "@capacitor/camera": "^7.0.3",
+    "@capacitor/cli": "^7.4.4",
+    "@capacitor/core": "^7.4.4",
+    "@capacitor/filesystem": "^7.1.6",
+    "@capacitor/haptics": "^7.0.3",
+    "@capacitor/keyboard": "^7.0.4",
+    "@capacitor/local-notifications": "^7.0.4",
+    "@capacitor/push-notifications": "^7.0.4",
+    "@capacitor/share": "^7.0.3",
+    "@capacitor/splash-screen": "^7.0.4",
+    "@capacitor/status-bar": "^7.0.4",
+    "@codetrix-studio/capacitor-google-auth": "^3.4.0-rc.4",
     "@google/genai": "^1.30.0",
     "@hookform/resolvers": "^3.10.0",
     "@jridgewell/trace-mapping": "^0.3.25",
@@ -54,6 +63,7 @@
     "@radix-ui/react-toggle": "^1.1.10",
     "@radix-ui/react-toggle-group": "^1.1.11",
     "@radix-ui/react-tooltip": "^1.2.8",
+    "@tailwindcss/postcss": "^4.1.18",
     "@tanstack/react-query": "^5.60.5",
     "@types/qrcode": "^1.5.6",
     "class-variance-authority": "^0.7.1",
@@ -71,6 +81,8 @@
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
     "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.545.0",
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
@@ -84,6 +96,7 @@
     "react-hook-form": "^7.66.0",
     "react-qr-code": "^2.0.18",
     "react-resizable-panels": "^2.1.9",
+    "react-router-dom": "^7.11.0",
     "recharts": "^2.15.4",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
@@ -113,7 +126,6 @@
     "@types/react-dom": "^19.2.0",
     "@types/ws": "^8.5.13",
     "@vitejs/plugin-react": "^5.0.4",
-    "autoprefixer": "^10.4.21",
     "drizzle-kit": "^0.31.4",
     "esbuild": "^0.25.0",
     "postcss": "^8.5.6",
