--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "express": "^4.21.2",
     "express-session": "^1.18.1",
     "firebase": "^12.6.0",
+    "firebase-admin": "^13.6.0",
     "framer-motion": "^12.23.24",
     "html2canvas": "^1.4.1",
     "input-otp": "^1.4.2",
